fix z-index at header

--- a/src/components/layouts/DefaultLayout/Header/Header.module.scss
+++ b/src/components/layouts/DefaultLayout/Header/Header.module.scss
@@ -3,6 +3,7 @@
     height: 94px;
     display: flex;
     align-items: center;
+    z-index: 99;
     
 
     .container {
