--- a/src/components/layouts/DefaultLayout/Header/NavBarItem/NavBarItem.module.scss
+++ b/src/components/layouts/DefaultLayout/Header/NavBarItem/NavBarItem.module.scss
@@ -29,6 +29,7 @@
         width: 300px;
         padding: 10px;
         border-radius: 10px;
+        z-index: 99;
     }
 
     &:hover {
